--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blaa",
+  "name": "project-uzo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,21 +11,17 @@
   "dependencies": {
     "@heroicons/react": "^2.0.16",
     "@next/font": "^13.2.4",
-    "@prisma/client": "^4.11.0",
-    "@supabase/supabase-js": "^2.12.0",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "firebase": "^9.18.0",
-    "framer-motion": "^10.6.0",
+    "framer-motion": "^10.8.5",
     "next": "13.2.4",
-    "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-swipeable": "^7.0.0",
     "typescript": "5.0.2"
   },
   "devDependencies": {
